--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "professionalbackend",
   "version": "1.0.0",
   "description": "a backend for learning the technology ",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon src/indes.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "Amaan Khan",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
