--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/indes.js"
+    "dev": "nodemon src/indes.js"
   },
   "keywords": [
     "javascript",
@@ -14,6 +14,7 @@
   "author": "Amaan Khan",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
   }
 }
